<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".telur_kukus">

    <ImageView
        android:id="@+id/telur2"
        android:layout_width="wrap_content"
        android:layout_height="256dp"
        app:srcCompat="@drawable/endog" />

    <TextView
        android:id="@+id/sub_telur"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="260dp"
        android:background="#093B51"
        android:padding="10dp"
        android:text="@string/body4"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub_telur" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/resepe3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/resep_telur"
                android:textSize="20sp" />

            <Button
                android:id="@+id/share5"
                android:layout_width="322dp"
                android:layout_height="59dp"
                android:layout_marginStart="31dp"
                android:layout_marginBottom="505dp"
                android:text="@string/share_text" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>